added docstrings to compressibility prior functions

--- a/repair_vs_redundancy.ipynb
+++ b/repair_vs_redundancy.ipynb
@@ -305,11 +305,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-15T11:52:07.746291Z",
-     "start_time": "2019-11-15T11:52:07.737143Z"
+     "end_time": "2019-11-15T12:10:30.669381Z",
+     "start_time": "2019-11-15T12:10:30.660703Z"
     }
    },
    "outputs": [],
@@ -379,25 +379,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-15T11:52:07.764412Z",
-     "start_time": "2019-11-15T11:52:07.748168Z"
+     "end_time": "2019-11-15T12:11:01.053927Z",
+     "start_time": "2019-11-15T12:11:01.032438Z"
     }
    },
    "outputs": [],
    "source": [
     "from math import log2\n",
-    "from string import ascii_uppercase\n",
+    "import string\n",
     "\n",
     "\n",
     "def mrf_degenerate(lang, meaning_list):\n",
+    "    \"\"\"\n",
+    "    Takes a degenerate language and returns a minimally redundant form description of the language's context free\n",
+    "    grammar.\n",
+    "\n",
+    "    :param lang: a language; represented as a tuple of forms_without_noisy_variants, where each form index maps to same\n",
+    "    index in meanings\n",
+    "    :param meaning_list: list of strings corresponding to all possible meanings\n",
+    "    :return: minimally redundant form description of the language's context free grammar (string)\n",
+    "    \"\"\"\n",
     "    mrf_string = 'S'\n",
     "    for i in range(len(meaning_list)):\n",
     "        meaning = meaning_list[i]\n",
-    "        if i != len(meaning_list)-1:\n",
-    "            mrf_string += str(meaning)+','\n",
+    "        if i != len(meaning_list) - 1:\n",
+    "            mrf_string += str(meaning) + ','\n",
     "        else:\n",
     "            mrf_string += str(meaning)\n",
     "    mrf_string += lang[0]\n",
@@ -405,21 +414,39 @@
     "\n",
     "\n",
     "def mrf_holistic(lang, meaning_list):\n",
+    "    \"\"\"\n",
+    "    Takes a holistic OR hybrid language and returns a minimally redundant form description of the language's context\n",
+    "    free grammar.\n",
+    "\n",
+    "    :param lang: a language; represented as a tuple of forms_without_noisy_variants, where each form index maps to same\n",
+    "    index in meanings\n",
+    "    :param meaning_list: list of strings corresponding to all possible meanings\n",
+    "    :return: minimally redundant form description of the language's context free grammar (string)\n",
+    "    \"\"\"\n",
     "    mrf_string = ''\n",
     "    for i in range(len(meaning_list)):\n",
     "        meaning = meaning_list[i]\n",
     "        form = lang[i]\n",
-    "        if i != len(meaning_list)-1:\n",
-    "            mrf_string += 'S'+meaning+form+'.'\n",
+    "        if i != len(meaning_list) - 1:\n",
+    "            mrf_string += 'S' + meaning + form + '.'\n",
     "        else:\n",
-    "            mrf_string += 'S'+meaning+form\n",
+    "            mrf_string += 'S' + meaning + form\n",
     "    return mrf_string\n",
-    "    \n",
+    "\n",
     "\n",
     "def mrf_compositional(lang, meaning_list):\n",
+    "    \"\"\"\n",
+    "    Takes a compositional language and returns a minimally redundant form description of the language's context free\n",
+    "    grammar.\n",
+    "\n",
+    "    :param lang: a language; represented as a tuple of forms_without_noisy_variants, where each form index maps to same\n",
+    "    index in meanings\n",
+    "    :param meaning_list: list of strings corresponding to all possible meanings\n",
+    "    :return: minimally redundant form description of the language's context free grammar (string)\n",
+    "    \"\"\"\n",
     "    n_features = len(meaning_list[0])\n",
-    "    non_terminals = ascii_uppercase[:n_features]\n",
-    "    mrf_string = 'S'+non_terminals\n",
+    "    non_terminals = string.ascii_uppercase[:n_features]\n",
+    "    mrf_string = 'S' + non_terminals\n",
     "    for i in range(len(non_terminals)):\n",
     "        non_terminal_symbol = non_terminals[i]\n",
     "        feature_values = []\n",
@@ -431,11 +458,20 @@
     "        for k in range(len(feature_values)):\n",
     "            value = feature_values[k]\n",
     "            segment = feature_value_segments[k]\n",
-    "            mrf_string += \".\"+non_terminal_symbol+value+segment\n",
+    "            mrf_string += \".\" + non_terminal_symbol + value + segment\n",
     "    return mrf_string\n",
     "\n",
     "\n",
     "def mrf_other(lang, meaning_list):\n",
+    "    \"\"\"\n",
+    "    Takes a language of the 'other' category and returns a minimally redundant form description of the language's\n",
+    "    context free grammar.\n",
+    "\n",
+    "    :param lang: a language; represented as a tuple of forms_without_noisy_variants, where each form index maps to same\n",
+    "    index in meanings\n",
+    "    :param meaning_list: list of strings corresponding to all possible meanings\n",
+    "    :return: minimally redundant form description of the language's context free grammar (string)\n",
+    "    \"\"\"\n",
     "    mapping_dict = {}\n",
     "    for i in range(len(lang)):\n",
     "        mapping_dict.setdefault(lang[i], []).append(meaning_list[i])\n",
@@ -444,32 +480,49 @@
     "    for form in mapping_dict.keys():\n",
     "        for k in range(len(mapping_dict[form])):\n",
     "            meaning = mapping_dict[form][k]\n",
-    "            if k != len(mapping_dict[form])-1:\n",
-    "                mrf_string += meaning+','\n",
+    "            if k != len(mapping_dict[form]) - 1:\n",
+    "                mrf_string += meaning + ','\n",
     "            else:\n",
     "                mrf_string += meaning\n",
-    "        if counter != len(mapping_dict.keys())-1:\n",
-    "            mrf_string += form+'.S'\n",
+    "        if counter != len(mapping_dict.keys()) - 1:\n",
+    "            mrf_string += form + '.S'\n",
     "        else:\n",
     "            mrf_string += form\n",
     "        counter += 1\n",
     "    return mrf_string\n",
-    "        \n",
     "\n",
-    "def minimally_redundant_form(lang, forms, meaning_list):\n",
-    "    lang_class = classify_language_four_forms(lang, forms, meaning_list) # 0 = degenerate, 1 = holistic, 2 = hybrid, 3 = compositional, 4 = other\n",
-    "    if lang_class == 0: # the language is 'degenerate'\n",
+    "\n",
+    "def minimally_redundant_form(lang, complete_forms, meaning_list):\n",
+    "    \"\"\"\n",
+    "    Takes a language of any class and returns a minimally redundant form description of its context free grammar.\n",
+    "\n",
+    "    :param lang: a language; represented as a tuple of forms_without_noisy_variants, where each form index maps to same\n",
+    "    index in meanings\n",
+    "    :param complete_forms: list containing all possible complete forms; corresponds to global variable\n",
+    "    'forms_without_noise'\n",
+    "    :param meaning_list: list of strings corresponding to all possible meanings\n",
+    "    :return: minimally redundant form description of the language's context free grammar (string)\n",
+    "    \"\"\"\n",
+    "    lang_class = classify_language_four_forms(lang, complete_forms, meaning_list)\n",
+    "    if lang_class == 0:  # the language is 'degenerate'\n",
     "        mrf_string = mrf_degenerate(lang, meaning_list)\n",
-    "    elif lang_class == 1 or lang_class == 2: # the language is 'holistic' or 'hybrid'\n",
+    "    elif lang_class == 1 or lang_class == 2:  # the language is 'holistic' or 'hybrid'\n",
     "        mrf_string = mrf_holistic(lang, meaning_list)\n",
-    "    elif lang_class == 3: # the language is 'compositional'\n",
+    "    elif lang_class == 3:  # the language is 'compositional'\n",
     "        mrf_string = mrf_compositional(lang, meaning_list)\n",
-    "    elif lang_class == 4: # the language is of the 'other' category\n",
+    "    elif lang_class == 4:  # the language is of the 'other' category\n",
     "        mrf_string = mrf_other(lang, meaning_list)\n",
     "    return mrf_string\n",
     "\n",
     "\n",
     "def character_probs(mrf_string):\n",
+    "    \"\"\"\n",
+    "    Takes a string in minimally redundant form and generates a dictionary specifying the probability of each of the\n",
+    "    symbols used in the string\n",
+    "\n",
+    "    :param mrf_string: a string in minimally redundant form\n",
+    "    :return: a dictionary with the symbols as keys and their corresponding probabilities as values\n",
+    "    \"\"\"\n",
     "    count_dict = {}\n",
     "    for character in mrf_string:\n",
     "        if character in count_dict.keys():\n",
@@ -478,12 +531,18 @@
     "            count_dict[character] = 1\n",
     "    prob_dict = {}\n",
     "    for character in count_dict.keys():\n",
-    "        char_prob = count_dict[character]/len(mrf_string)\n",
+    "        char_prob = count_dict[character] / len(mrf_string)\n",
     "        prob_dict[character] = char_prob\n",
     "    return prob_dict\n",
     "\n",
     "\n",
     "def coding_length(mrf_string):\n",
+    "    \"\"\"\n",
+    "    Takes a string in minimally redundant form and returns its coding length in bits\n",
+    "\n",
+    "    :param mrf_string: a string in minimally redundant form\n",
+    "    :return: coding length in bits\n",
+    "    \"\"\"\n",
     "    char_prob_dict = character_probs(mrf_string)\n",
     "    coding_len = 0\n",
     "    for character in mrf_string:\n",
@@ -491,19 +550,31 @@
     "    return -coding_len\n",
     "\n",
     "\n",
-    "def prior_single_lang(mrf_string):\n",
+    "def prior_single_lang(lang, complete_forms, meaning_list):\n",
+    "    \"\"\"\n",
+    "    Takes a language and returns its PROPORTIONAL prior probability; this still needs to be normalized over all\n",
+    "    languages in order to give the real prior probability.\n",
+    "\n",
+    "    :param lang: a language; represented as a tuple of forms_without_noisy_variants, where each form index maps to same\n",
+    "    index in meanings\n",
+    "    :param complete_forms: list containing all possible complete forms; corresponds to global variable\n",
+    "    'forms_without_noise'\n",
+    "    :param meaning_list: list of strings corresponding to all possible meanings\n",
+    "    :return: PROPORTIONAL prior probability (float)\n",
+    "    \"\"\"\n",
+    "    mrf_string = minimally_redundant_form(lang, complete_forms, meaning_list)\n",
     "    coding_len = coding_length(mrf_string)\n",
-    "    prior = 2**-coding_len\n",
-    "    return prior"
+    "    prior = 2 ** -coding_len\n",
+    "    return prior\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-15T11:52:07.774907Z",
-     "start_time": "2019-11-15T11:52:07.766485Z"
+     "end_time": "2019-11-15T12:11:01.818916Z",
+     "start_time": "2019-11-15T12:11:01.808517Z"
     }
    },
    "outputs": [
@@ -521,6 +592,8 @@
       "S02,03,12,13aa\n",
       "coding_len is:\n",
       "38.55\n",
+      "prior this lang is:\n",
+      "2.488119421993922e-12\n",
       "\n",
       "1\n",
       "lang_class_text is:\n",
@@ -531,6 +604,8 @@
       "S02,03,12,13ab\n",
       "coding_len is:\n",
       "40.55\n",
+      "prior this lang is:\n",
+      "6.220298554984805e-13\n",
       "\n",
       "2\n",
       "lang_class_text is:\n",
@@ -541,6 +616,8 @@
       "S02,03,12aa.S13ab\n",
       "coding_len is:\n",
       "52.73\n",
+      "prior this lang is:\n",
+      "1.3368788379305763e-16\n",
       "\n",
       "3\n",
       "lang_class_text is:\n",
@@ -551,6 +628,8 @@
       "S02,03,12aa.S13bb\n",
       "coding_len is:\n",
       "53.49\n",
+      "prior this lang is:\n",
+      "7.922244965514519e-17\n",
       "\n",
       "4\n",
       "lang_class_text is:\n",
@@ -561,6 +640,8 @@
       "SAB.A0a.A1b.B2a.B3b\n",
       "coding_len is:\n",
       "59.2\n",
+      "prior this lang is:\n",
+      "1.5092773625944422e-18\n",
       "\n",
       "5\n",
       "lang_class_text is:\n",
@@ -571,6 +652,8 @@
       "S02,03aa.S12ab.S13ba\n",
       "coding_len is:\n",
       "61.68\n",
+      "prior this lang is:\n",
+      "2.700000000000012e-19\n",
       "\n",
       "6\n",
       "lang_class_text is:\n",
@@ -581,6 +664,8 @@
       "S02,03aa.S12ab.S13bb\n",
       "coding_len is:\n",
       "62.17\n",
+      "prior this lang is:\n",
+      "1.9221679687499936e-19\n",
       "\n",
       "7\n",
       "lang_class_text is:\n",
@@ -590,7 +675,9 @@
       "mrf_string is:\n",
       "S02aa.S03ab.S12bb.S13ba\n",
       "coding_len is:\n",
-      "67.29\n"
+      "67.29\n",
+      "prior this lang is:\n",
+      "5.553712540966203e-21\n"
      ]
     }
    ],
@@ -633,9 +720,9 @@
     "    coding_len = coding_length(mrf_string)\n",
     "    print(\"coding_len is:\")\n",
     "    print(round(coding_len, ndigits=2))\n",
-    "#     prior = prior_single_lang(mrf_string)\n",
-    "#     print(\"prior this lang is:\")\n",
-    "#     print(prior)\n"
+    "    prior = prior_single_lang(lang, forms_without_noisy_variants, meanings)\n",
+    "    print(\"prior this lang is:\")\n",
+    "    print(prior)\n"
    ]
   },
   {
