added extra thoughts on motivation/hypotheses

--- a/repair_vs_redundancy.ipynb
+++ b/repair_vs_redundancy.ipynb
@@ -18,8 +18,8 @@
     "    - 13 --> 'baab'\n",
     "* **Repair**: This strategy could be seen as a form of redundancy across turns, instead of within a signal. However, it will be initiated only when neccesary, and should therefore fare slightly better than the reduplication strategy under a pressure for minimal effort (where effort is measured as total shared utterance length of both interlocutors across a set number of interactions).\n",
     "\n",
-    "The predictions of Vinicius & Seán (2016 Evolang abstract titled \"Language adapts to signal disruption in interaction\"), are that although the reduplication strategy and the repair strategy should do equally well under a pressure for learnability, adding the possibility of repair will 'lift the pressure for redundancy', such that receivers can request that speakers repeat a signal only after a problem occurs.\n",
-    "---> However, we would add that in the absence of a pressure for minimal effort, the repair strategy does not have an advantage over the reduplication strategy. \n",
+    "The predictions of Vinicius & Seán (2016 Evolang abstract titled \"Language adapts to signal disruption in interaction\"), are that although the reduplication strategy and the repair strategy should do equally well under a pressure for learnability, adding the possibility of repair will 'lift the pressure for redundancy', such that receivers can request that speakers repeat a signal only after a problem occurs. The line of reasoning of Vinicius & Seán in this Evolang abstract is that although the reduplication strategy would do relatively well under a pressure for learnability, it has not been adopted widely in natural language. They argue that this is a result of the fact that repair was available. \n",
+    "---> Another way of looking at this is that the repair strategy will do better than the reduplication strategy under a pressure for minimal effort (if measured in terms of shared utterance length of speaker and hearer across a fixed number of interactions). Such a pressure for minimal effort, in combination with a pressure for mutual understanding (or expressivity as Vinicius & Seán call it) would provide a push for using repair, and once repair is used, it will 'lift the pressure for redundancy', as Vinicius & Seán put it. \n",
     "    \n"
    ]
   },
@@ -42,7 +42,7 @@
     "| **- learnability** | Any of the three strategies above will do                                         | Repair + Compositional OR Holistic         |\n",
     "| **+ learnability** | Reduplication + Compositional OR Repair + Compositional | Repair + Compositional |\n",
     "\n",
-    "<span class=\"mark\">Note</span> that the prediction in the {-learnability, +minimal effort} condition above only holds if we do not distinguish between open and closed requests. Because if we do, as in the model we submitted to evolang, we'd expect the Repair + compositional strategy to fare best in this condition, without the need for a pressure for learnability."
+    "<span class=\"mark\">**Note**</span> that the prediction in the {-learnability, +minimal effort} condition above only holds if we do not distinguish between open and closed requests. Because if we do, as in the model we submitted to evolang, we'd expect the Repair + compositional strategy to fare best in this condition, without the need for a pressure for learnability."
    ]
   },
   {
@@ -305,11 +305,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-15T12:10:30.669381Z",
-     "start_time": "2019-11-15T12:10:30.660703Z"
+     "end_time": "2019-11-19T13:34:47.348443Z",
+     "start_time": "2019-11-19T13:34:47.338653Z"
     }
    },
    "outputs": [],
@@ -379,11 +379,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-15T12:11:01.053927Z",
-     "start_time": "2019-11-15T12:11:01.032438Z"
+     "end_time": "2019-11-19T13:34:47.368623Z",
+     "start_time": "2019-11-19T13:34:47.350487Z"
     }
    },
    "outputs": [],
@@ -570,11 +570,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-15T12:11:01.818916Z",
-     "start_time": "2019-11-15T12:11:01.808517Z"
+     "end_time": "2019-11-19T13:34:47.379928Z",
+     "start_time": "2019-11-19T13:34:47.370722Z"
     }
    },
    "outputs": [
@@ -727,11 +727,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-15T11:52:07.783812Z",
-     "start_time": "2019-11-15T11:52:07.776761Z"
+     "end_time": "2019-11-19T13:34:47.389529Z",
+     "start_time": "2019-11-19T13:34:47.382398Z"
     }
    },
    "outputs": [
@@ -808,7 +808,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alright, so as we can see from the coding lengths above, possibility 1 of how to represent languages gives relative coding lengths that capture the intuitions we have about how hard it is to learn these different languages: the compositional languages with reduplication only have slightly longer coding lengths than the compositional language without it (ratio reduplication:repair = 1.09:1), whereas the holistic language resulting from the diversify signal strategy has a significantly longer coding length (ratio diversify_signal:repair = 1.43:1)"
+    "Alright, so as we can see from the coding lengths above, possibility 1 of how to represent languages gives relative coding lengths that capture the intuitions we have about how hard it is to learn these different languages: the compositional languages with reduplication only have slightly longer coding lengths than the compositional language without it (ratio reduplication:repair = 1.09:1), whereas the holistic language resulting from the diversify signal strategy has a significantly longer coding length (ratio diversify_signal:repair = 1.43:1)\n",
+    "\n",
+    "**<span class=\"mark\">Note:</span>** What I haven't looked at yet is how these ratios scale when signal lengths are increased. For instance, if noise would regularly obscure _two_ characters instead of one, the diversify signal strategy would require longer signals, which would result in even larger coding lengths."
    ]
   },
   {
