--- a/repair_vs_redundancy.ipynb
+++ b/repair_vs_redundancy.ipynb
@@ -42,7 +42,9 @@
     "| **- learnability** | Any of the three strategies above will do                                         | Repair + Compositional OR Holistic         |\n",
     "| **+ learnability** | Reduplication + Compositional OR Repair + Compositional | Repair + Compositional |\n",
     "\n",
-    "<span class=\"mark\">**Note**</span> that the prediction in the {-learnability, +minimal effort} condition above only holds if we do not distinguish between open and closed requests. Because if we do, as in the model we submitted to evolang, we'd expect the Repair + compositional strategy to fare best in this condition, without the need for a pressure for learnability."
+    "<span class=\"mark\">**Note**</span> that the prediction in the {-learnability, +minimal effort} condition above only holds if we do not distinguish between open and closed requests. Because if we do, as in the model we submitted to evolang, we'd expect the Repair + compositional strategy to fare best in this condition, without the need for a pressure for learnability.\n",
+    "\n",
+    "<span class=\"mark\">**Note**</span> also that the coding length of the Reduplication + Compositional languages _is_ slightly higher than the coding length of the Repair + Compositional languages (ratio reduplication:repair = 1.09:1; see calculations in section 1.3.2), so depending on the bottleneck, we might expect the Repair + Compositional strategy to win out even in the {-learnability, +minimal effort} condition."
    ]
   },
   {
