added note on compressibility ratio reduplication vs. redundancy

--- a/repair_vs_redundancy.ipynb
+++ b/repair_vs_redundancy.ipynb
@@ -11,15 +11,15 @@
     "The idea here is that there are different possible strategies of dealing with noise that are attested in natural communication systems:\n",
     "\n",
     "* **Reduplication**: simply repeat the signal several times. This is compatible with a compositional system. It is not costly in terms of learnability, because the only extra thing that needs to be learned is a single extra rule that applies to all signals. However, it is relatively costly in terms of utterance length (it would thus not do well under a pressure for minimal effort). \n",
-    "* **Diversify signal**: make the individual segments that each signal consists of as distinct as possible. For example, in the language shown below, all four signals can be distinguished from each other in all cases where one character is obscured by noise. This strategy however is not compatible with compositionality, because it relies on making each of the segments as distinct from each other as possible. That means these languages are necessarily holistic, and therefore less easy to learn (so they would do less well under a pressure for learnability). Below is an example of a language for which, if noise obscures a single character, each signal would still be uniquely identifiable under noise.\n",
+    "* **Diversify signal**: make the individual segments that each signal consists of as distinct as possible. For example, in the language shown below, all four signals can be distinguished from each other in all cases where one character is obscured by noise. This strategy however is not compatible with compositionality, because it relies on making each of the segments as distinct from each other as possible. That means these languages are necessarily holistic, and therefore less easy to learn (so they would do less well under a pressure for learnability).\n",
     "    - 02 --> 'aaaa'\n",
     "    - 03 --> 'bbbb'\n",
     "    - 12 --> 'abba'\n",
     "    - 13 --> 'baab'\n",
-    "* **Repair**: This strategy could be seen as a form of redundancy across turns, instead of within a signal. However, it will be initiated only when neccesary, and should therefore fare slightly better than the reduplication strategy under a pressure for minimal effort (where effort is measured as total shared utterance length of both interlocutors across a set number of interactions).\n",
+    "* **Repair**: This strategy could be seen as a form of redundancy across turns, instead of within a signal. However, it will be initiated only when neccesary, and should therefore fare slightly better than the reduplication strategy under a pressure for minimal effort (where effort is measured as total shared utterance length of both interlocutors across a given number of interactions).\n",
     "\n",
     "The predictions of Vinicius & Seán (2016 Evolang abstract titled \"Language adapts to signal disruption in interaction\"), are that although the reduplication strategy and the repair strategy should do equally well under a pressure for learnability, adding the possibility of repair will 'lift the pressure for redundancy', such that receivers can request that speakers repeat a signal only after a problem occurs. The line of reasoning of Vinicius & Seán in this Evolang abstract is that although the reduplication strategy would do relatively well under a pressure for learnability, it has not been adopted widely in natural language. They argue that this is a result of the fact that repair was available. \n",
-    "---> Another way of looking at this is that the repair strategy will do better than the reduplication strategy under a pressure for minimal effort (if measured in terms of shared utterance length of speaker and hearer across a fixed number of interactions). Such a pressure for minimal effort, in combination with a pressure for mutual understanding (or expressivity as Vinicius & Seán call it) would provide a push for using repair, and once repair is used, it will 'lift the pressure for redundancy', as Vinicius & Seán put it. \n",
+    "---> Another way of looking at this is that the repair strategy will do better than the reduplication strategy under a pressure for minimal effort (if measured in terms of shared utterance length of speaker and hearer across a fixed number of interactions). Such a pressure for minimal effort, in combination with a pressure for mutual understanding (a.k.a. expressivity) would provide a push for using repair, and once repair is used, it will 'lift the pressure for redundancy', as Vinicius & Seán put it. \n",
     "    \n"
    ]
   },
@@ -30,7 +30,7 @@
     "## Predictions under different selection pressures:\n",
     "\n",
     "We predict that under the following assumptions:\n",
-    "- There is a pressure for expressivity/mutual understanding (or rather: a pressure to get ones signal/message across; which feels like a better way to describe the pressure that frogs and song birds are under)\n",
+    "- There is a pressure for expressivity/mutual understanding\n",
     "- Noise regularly disrupts part of the signal (Vinicius & Seán used a 0.5 probability in their experiment)\n",
     "- Repair is a possibility\n",
     "\n",
@@ -42,9 +42,9 @@
     "| **- learnability** | Any of the three strategies above will do                                         | Repair + Compositional OR Holistic         |\n",
     "| **+ learnability** | Reduplication + Compositional OR Repair + Compositional | Repair + Compositional |\n",
     "\n",
-    "<span class=\"mark\">**Note**</span> that the prediction in the {-learnability, +minimal effort} condition above only holds if we do not distinguish between open and closed requests. Because if we do, as in the model we submitted to evolang, we'd expect the Repair + compositional strategy to fare best in this condition, without the need for a pressure for learnability.\n",
+    "<span class=\"mark\">**Note**</span> that the prediction in the {-learnability, +minimal effort} condition above only holds if we do not distinguish between open and closed requests. Because if we do, as in the model we submitted to evolang, we'd expect the Repair + Compositional strategy to fare best in this condition (i.e. better than Repair + Holistic), without the need for a pressure for learnability.\n",
     "\n",
-    "<span class=\"mark\">**Note**</span> also that the coding length of the Reduplication + Compositional languages _is_ slightly higher than the coding length of the Repair + Compositional languages (ratio reduplication:repair = 1.09:1; see calculations in section 1.3.2), so depending on the bottleneck, we might expect the Repair + Compositional strategy to win out even in the {-learnability, +minimal effort} condition."
+    "<span class=\"mark\">**Note**</span> also that the coding length of the Reduplication + Compositional languages _is_ slightly higher than the coding length of the Repair + Compositional languages (ratio reduplication:repair = 1.09:1; see calculations in section 1.3.2), so depending on the bottleneck, we might expect the Repair + Compositional strategy to win out even in the {+learnability, -minimal effort} condition."
    ]
   },
   {
@@ -572,11 +572,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-19T13:34:47.379928Z",
-     "start_time": "2019-11-19T13:34:47.370722Z"
+     "end_time": "2019-11-19T14:42:13.568105Z",
+     "start_time": "2019-11-19T14:42:13.557020Z"
     }
    },
    "outputs": [
