thoughts on whether repair should be learned

--- a/repair_vs_redundancy.ipynb
+++ b/repair_vs_redundancy.ipynb
@@ -310,8 +310,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-19T13:34:47.348443Z",
-     "start_time": "2019-11-19T13:34:47.338653Z"
+     "end_time": "2019-11-19T19:26:59.388988Z",
+     "start_time": "2019-11-19T19:26:59.380779Z"
     }
    },
    "outputs": [],
@@ -384,8 +384,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-19T13:34:47.368623Z",
-     "start_time": "2019-11-19T13:34:47.350487Z"
+     "end_time": "2019-11-19T19:26:59.408720Z",
+     "start_time": "2019-11-19T19:26:59.390912Z"
     }
    },
    "outputs": [],
@@ -572,11 +572,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-19T14:42:13.568105Z",
-     "start_time": "2019-11-19T14:42:13.557020Z"
+     "end_time": "2019-11-19T19:26:59.419463Z",
+     "start_time": "2019-11-19T19:26:59.410837Z"
     }
    },
    "outputs": [
@@ -732,8 +732,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-19T13:34:47.389529Z",
-     "start_time": "2019-11-19T13:34:47.382398Z"
+     "end_time": "2019-11-19T19:26:59.428428Z",
+     "start_time": "2019-11-19T19:26:59.421279Z"
     }
    },
    "outputs": [
@@ -822,6 +822,25 @@
     "## Conclusion about how to represent languages:\n",
     "\n",
     "Based on all the above, I'd say let's go for possibility 1 of allowing for different form lengths. That keeps our way of representing languages as close as possibility to the one used by Kirby et al. (2015); it allows us to straightforwardly calculate the coding lengths; and it will not cause languages to make use of a different number of characters, as possibility 2 would."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Should repair be learned or not?\n",
+    "\n",
+    "### There are two options here:\n",
+    "\n",
+    "1. **Repair is learned:** This would mean that every possible language in the hypothesis space could in principle be combined with repair. This could be encoded as an extra bit of information added on to the language itself, so that repair can be either 'on' or 'off'. \n",
+    "2. **Repair is _not_ learned:** This would mean that we assume that agents have the ability to asses whether their particular language requires using repair or not. So we could simply code up the communication function in such a way that if an agent's language uses neither the reduplication nor the diversify signal strategy, the agent automatically uses repair (when noise is encountered).\n",
+    "\n",
+    "### Advantages and disadvantages:\n",
+    "\n",
+    "We would prefer option 1 (repair is learned) because it feels like the most complete model: we allow for all possible combinations of strategies, and no strategy is a priori excluded (such as the combination of reduplication with repair). We also know from actual development that the conversational infrastructure of things like turn-taking and repair indeed needs to be learned. However, the disadvantage of option 1 is that it would double the hypothesis space (so if we go for possibility 1 in terms of representing languages, the hypothesis space would grow from 160,000 languages to 320,000 languages.\n",
+    "\n",
+    "\n",
+    "Something that isn't particularly an advantage or a disadvantage, but simply a difference, is that adding in repair as a bit to the encoding of the language would slightly increase the coding length of the Repair + Compositionality strategy, and thereby minimise the difference in coding length between the Reduplication + Compositionality and the Repair + Compositionality strategies, which would lower the chance of the Repair + Compositionality strategy becoming dominant already in the {+learnability, -minimal effort} condition, so in the absence of the minimal effort pressure.\n"
    ]
   },
   {
