changed section heading

--- a/repair_vs_redundancy.ipynb
+++ b/repair_vs_redundancy.ipynb
@@ -835,7 +835,7 @@
     "1. **Repair is learned:** This would mean that every possible language in the hypothesis space could in principle be combined with repair. This could be encoded as an extra bit of information added on to the language itself, so that repair can be either 'on' or 'off'. \n",
     "2. **Repair is _not_ learned:** This would mean that we assume that agents have the ability to asses whether their particular language requires using repair or not. So we could simply code up the communication function in such a way that if an agent's language uses neither the reduplication nor the diversify signal strategy, the agent automatically uses repair (when noise is encountered).\n",
     "\n",
-    "### Advantages and disadvantages:\n",
+    "### Pros and cons:\n",
     "\n",
     "We would prefer option 1 (repair is learned) because it feels like the most complete model: we allow for all possible combinations of strategies, and no strategy is a priori excluded (such as the combination of reduplication with repair). We also know from actual development that the conversational infrastructure of things like turn-taking and repair indeed needs to be learned. However, the disadvantage of option 1 is that it would double the hypothesis space (so if we go for possibility 1 in terms of representing languages, the hypothesis space would grow from 160,000 languages to 320,000 languages.\n",
     "\n",
